create nav and added image

--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 </head>
 
 <body>
-    <h1 class="first-header">hello world</h1>
-    <h1 style=>hola world</h1>
-    <h2>test</h2>
-    <h6>another test</h6>
-    <p>some <strong>word</strong> in this <em>paragraph</em></p>
-    <button class="button" onclick="alert('this is an alert!!')">like</button>
+    <div class="nav">
+        <h1 class="title">Arnaldo Gonzalez</h1>
+        <div class="nav-link-container">
+            <a href="" class="nav-link">about</a>
+            <a href="" class="nav-link">portfolio</a>
+            <a href="" class="nav-link">Resumen</a>
+            <a href="" class="nav-link">Contact</a>
+        </div>
+    </div>
+    <img src="./Arnaldo.jpg" alt="" class="picture-of-me">
 </body>
 
 </html>
