--- a/index.html
+++ b/index.html
@@ -12,14 +12,78 @@
 <body>
     <div class="nav">
         <h1 class="title">Arnaldo Gonzalez</h1>
-        <div class="nav-link-container">
-            <a href="" class="nav-link">about</a>
-            <a href="" class="nav-link">portfolio</a>
+        <div class="nav-links-container">
+            <a href="#about" class="nav-link">about</a>
+            <a href="#portfolio" class="nav-link">portfolio</a>
             <a href="" class="nav-link">Resumen</a>
             <a href="" class="nav-link">Contact</a>
         </div>
     </div>
-    <img src="./Arnaldo.jpg" alt="" class="picture-of-me">
+
+<div class="landing-page"></div>
+
+    <div id='about' class="about-container">
+        <div class="picture-of-me-container">
+            <img src="./Arnaldo.jpg" alt="" class="picture-of-me">
+        </div>
+        <div class="about-text">
+            My name is Arnaldo Luis
+        </div>
+    </div>
+    <div id="portfolio" class="portfolio-container">
+        <h2 class="section-header">portfolio</h2>
+        <div class="gallery">
+            <div class="project">
+                <div class="image"></div>
+                <p class="description">this is a project.</p>
+            </div>
+            <div class="project">
+                <div class="image"></div>
+                <p class="description">this is a project.</p>
+            </div>
+            <div class="project">
+                <div class="image"></div>
+                <p class="description">this is a project.</p>
+            </div>
+            <div class="project">
+                <div class="image"></div>
+                <p class="description">this is a project.</p>
+            </div>
+            <div class="project">
+                <div class="image"></div>
+                <p class="description">this is a project.</p>
+            </div>
+            <div class="project">
+                <div class="image"></div>
+                <p class="description">this is a project.</p>
+            </div>
+        </div>
+    </div>
+
+    <div id='resume' class="rsume">
+        <h2 class="section-header">Resume</h2>
+        <h4 class="job-title">Senior Web Developer</h4>
+        <h4 class="company">NorthWest Website Development</h4>
+        <ul class="job-duties-list">
+            <li class="duty">Meet with clients to gather requieriment, desing, sites, and outline schedules.</li>
+            <li class="duty">Manage web projects with 2-5 developers.</li>
+            <li class="duty">Developers concept, control project flow, and ensure deliverable milestones are met.</li>
+        </ul>
+        <h4 class="job-title">Web Developer</h4>
+        <h4 class="company">STOMP Media</h4>
+        <ul class="job-duties-list">
+            <li class="duty">Performed webside desing and development for clients in diverse fields such as medical devices, educational software, and entertainment.</li>
+            <li class="duty">Specialized in sites for new local artist, incuding elements such as tour calendars, tcket shopcarts, music streaming, and news updates.</li>
+            <li class="duty">Worked closely with senior developer and learned advanced project management skills.</li>
+        </ul>
+        <h4 class="job-title">Contract Web Developer</h4>
+        <h4 class="company">Self-Emplyed</h4>
+        <ul class="job-duties-list">
+            <li class="duty">Designed websities for clients on a contract basis.</li>
+            <li class="duty">Developed project scope and created concepts.</li>
+            <li class="duty">Maintaindned schedules and assured on-time delivery of content.</li>
+        </ul>
+    </div>
 </body>
 
 </html>
