added an email form

--- a/index.html
+++ b/index.html
@@ -84,6 +84,21 @@
             <li class="duty">Maintaindned schedules and assured on-time delivery of content.</li>
         </ul>
     </div>
+
+    <div class="contact" id="contact">
+        <form action="http://fvi-grad.com:4004/email" class="email-form" method="post">
+            <input class="form-input" type="hidden" name="dest_email" value="agonzalez@fvi.edu">
+            <input class="form-input" type="text" name="full_name" placeholder="Full Name">
+            <input class="form-input" type="text" name="subject" placeholder="subject">
+            <input class="form-input" type="date" name="ddate">
+            <input class="form-input" type="submit" value="send">
+        </form>
+
+        <div class="form-text">
+            <h2>Contact Me</h2>
+            <p>Please send me an email</p>
+        </div>
+    </div>
 </body>
 
 </html>
